Fixed alignment issues
Fixed alignment issues raised after adding nav bar

--- a/css/sitemap.css
+++ b/css/sitemap.css
@@ -2,8 +2,9 @@
 
 body {
     background-color: #1f2740;
-    margin: 0 auto;
-    max-width: 900px;
+    width:auto;
+    height: 100vh;
+    overflow: hidden;
 }
 
 svg {
@@ -34,7 +35,7 @@ text+text {
 .line {
     fill: none;
     stroke: #f65a6d;
-    stroke-width: 4;
+    stroke-width: 7;
     stroke-linecap: round;
     stroke-linejoin: round;
 }
